Update stylesheet and script file paths in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Real-Time News</title>
   <meta name="description" content="Real-Time News — live updates from Google News (UPSC, IAS, Civil Services, Current Affairs, PIB, Government Schemes). Auto-refresh, search, dark mode, GitHub Pages ready." />
 
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="style.css" />
 
   <!-- Favicons (simple) -->
   <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
@@ -51,6 +51,6 @@
     </div>
   </footer>
 
-  <script src="js/script.js" defer></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
