--- a/index.html
+++ b/index.html
@@ -1,45 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Real-Time News Portal</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Real-Time UPSC News</title>
+  <meta name="description" content="Real-Time News — UPSC & Current Affairs. Auto-refresh, search, dark mode." />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="topbar">
     <div class="brand">
-      <h1>Edulive News</h1>
-      <p class="tagline">Real-Time UPSC & Current Affairs</p>
+      <h1>Real-Time UPSC News</h1>
+      <p class="tagline">UPSC · IAS · Current Affairs · PIB · Government Schemes</p>
     </div>
-    <div id="clock"></div>
-    <button id="darkToggle">🌙</button>
+
+    <div class="controls">
+      <label class="search">
+        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M9.5 3a6.5 6.5 0 014.95 10.66l4.44 4.44-1.42 1.42-4.44-4.44A6.5 6.5 0 119.5 3zm0 2a4.5 4.5 0 100 9 4.5 4.5 0 000-9z"/></svg>
+        <input id="searchInput" type="search" placeholder="Search news..." aria-label="Search news">
+      </label>
+
+      <div class="right-controls">
+        <div id="clock" class="clock" aria-hidden="true"></div>
+        <button id="darkToggle" class="btn" aria-pressed="false" title="Toggle dark mode">🌓</button>
+      </div>
+    </div>
   </header>
 
   <main class="container">
-    <section class="intro">
-      <h2>Welcome to Real-Time News</h2>
-      <p>Stay updated with live UPSC, IAS, and government current affairs. Updated every few minutes — no refresh needed!</p>
-    </section>
+    <nav class="sections-nav" id="sectionsNav" aria-label="Sections"></nav>
 
-    <nav class="section-bar">
-      <button class="section-pill active" data-section="latest">Latest</button>
-      <button class="section-pill" data-section="economy">Economy</button>
-      <button class="section-pill" data-section="science">Science</button>
-      <button class="section-pill" data-section="sports">Sports</button>
-    </nav>
-
-    <section id="news-container" class="news-grid">
-      <p class="loading">Loading news...</p>
+    <section id="newsArea" class="news-area" aria-live="polite">
+      <!-- News cards populated here -->
     </section>
   </main>
 
-  <button id="toTopBtn">↑</button>
-
-  <footer>
-    <p>Powered by Edulive News • Fetching Real-Time Headlines</p>
+  <footer class="footer">
+    <small>Auto-refresh every 5 minutes • Summaries & MCQs generated locally. For production use server-side summarizer for better quality.</small>
   </footer>
 
-  <script src="script.js"></script>
+  <button id="toTopBtn" title="Scroll to top">↑</button>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
+
