--- a/index.html
+++ b/index.html
@@ -3,45 +3,37 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Real-Time UPSC News</title>
-  <meta name="description" content="Real-Time News — UPSC & Current Affairs. Auto-refresh, search, dark mode." />
+  <title>Real-Time News</title>
+  <meta name="description" content="Real-Time News — live updates from multiple sources with AI summaries." />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
 </head>
 <body>
   <header class="topbar">
     <div class="brand">
-      <h1>Real-Time UPSC News</h1>
-      <p class="tagline">UPSC · IAS · Current Affairs · PIB · Government Schemes</p>
+      <h1>Real-Time News</h1>
+      <p class="tagline">UPSC · IAS · Civil Services · Current Affairs · PIB · Government Schemes</p>
     </div>
 
     <div class="controls">
       <label class="search">
-        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M9.5 3a6.5 6.5 0 014.95 10.66l4.44 4.44-1.42 1.42-4.44-4.44A6.5 6.5 0 119.5 3zm0 2a4.5 4.5 0 100 9 4.5 4.5 0 000-9z"/></svg>
         <input id="searchInput" type="search" placeholder="Search news..." aria-label="Search news">
       </label>
-
-      <div class="right-controls">
-        <div id="clock" class="clock" aria-hidden="true"></div>
-        <button id="darkToggle" class="btn" aria-pressed="false" title="Toggle dark mode">🌓</button>
-      </div>
+      <button id="darkToggle" class="btn" aria-pressed="false" title="Toggle dark mode">🌙</button>
     </div>
   </header>
 
   <main class="container">
-    <nav class="sections-nav" id="sectionsNav" aria-label="Sections"></nav>
-
-    <section id="newsArea" class="news-area" aria-live="polite">
-      <!-- News cards populated here -->
-    </section>
+    <section id="newsArea" class="news-area" aria-live="polite"></section>
   </main>
 
   <footer class="footer">
-    <small>Auto-refresh every 5 minutes • Summaries & MCQs generated locally. For production use server-side summarizer for better quality.</small>
+    <div><small>Auto-refresh every 5 minutes • Data fetched from NewsData.io • AI-powered summaries</small></div>
+    <div><small>Built for GitHub Pages — No backend needed.</small></div>
   </footer>
-
-  <button id="toTopBtn" title="Scroll to top">↑</button>
 
   <script src="script.js" defer></script>
 </body>
 </html>
 
+ 
